kubeBakeryDeploy/prometheus/bakery_prometheus_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kakey1-prometheus-deployment
  namespace: kakey1
  labels:
    app: kakey1-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kakey1-prometheus
  template:
    metadata:
      labels:
        app: kakey1-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.43.0
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
              subPath: kakey1-prometheus-config.yml

      volumes:
        - name: prometheus-config
          configMap:
            name: kakey1-prometheus-config
