kubeBakeryDeploy/prometheus/bakery_prometheus_svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: kakey1
  name: kakey1-prometheus-service
spec:
  type: ClusterIP
  selector:
    app: kakey1-prometheus
  ports:
    - port: 9090
      targetPort: 9090
