kubeBakeryDeploy/prometheus/bakery_prometheus_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kakey1
  name: kakey1-prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.kakey-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kakey1-prometheus-service
            port:
              number: 9090
